# jackchat-lib

./: .gitignore  README.md  pyproject.toml  setup.py
src/: __init__.py  pyproject.toml  readers.py  setup.py
src/jack-chat/: config.py  models.py  retriever.py
src/jackchat/: .env  __init__.py  requirements.txt
src/rag_azure/: __init__.py  retriever.py  simple_qa.py
src/tests/: test_models.py  test_retriever.py
